2004-01-30  Scott Dattalo  <scott@dattalo.com>
	* almost all source files - still trying to sort out include 
	dependencies. There's a weird bug where gcc is adding an extra
	4-byte offset to pointers in some instances. I have no clue why...
	
2004-01-29  Scott Dattalo  <scott@dattalo.com>
	* almost all source files - trying to sort out include dependencies
	
2004-01-28  Scott Dattalo  <scott@dattalo.com>
	* src/pir.h moved all of the PIR*::put()'s to the PIR base class
	* src/intcon.h, src/intcon.cc moved inline functions that called
	bp and trace objects from the header file to the .cc file.
	* src/pir.cc new file - added so that inline functions that called
	bp and trace objects could be removed from the header file.
	* src/Makefile.am added pir.cc to the list of src files.
	
2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/* gui/*
	  Replaced references to 'file_register' with 'Register'.
	  Removed many gpsim_*() calls. 
	  Renamed the program_memory_access class to ProgramMemoryAccess.
	  Moved processor member functions associated with code breakpoints
	  into the ProgramMemoryAccess class.
	
2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/register.h, src/register.cc, src/pic-register.h, src/pic-processor.h,
	  src/14bit-registers.cc
	cleaned up some include file dependencies.
	moved the program counter class.
	
2004-01-23  Scott Dattalo  <scott@dattalo.com>
	* src/trace.cc, src/trace.h: added boolean event logger
	* src/intcon.cc, src/16bit-*: Debugging an interrupt problem
	with the 16-bit core
	
2004-01-22  Scott Dattalo  <scott@dattalo.com>
	* gui/gui*.cc: converted the cross_reference_to_gui structure
	into the CrossReferenceToGUI class.
	* src/pir.h: fixed default names of the PIR registers
	* regression/p16f873/p16f873.asm: added
	
2004-01-20  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui_src_asm.cc, gui_watch.cc:
	  Changed gpsim_* api calls to their direct counterparts
	* src/interface.cc, src/interface.h: