@@ -1696,13 +1696,21 @@ void Register_Window::NewProcessor(GUI_Processor *gp)
   row_height = 3 * char_width + 6;
   gtk_sheet_set_row_height (register_sheet, j, row_height);
 
+  cout << " ram " << gp->cpu->rma.get_size() << endl;
+  cout << " eeprom " << gp->cpu->ema.get_size() << endl;
 
-  RegisterMemoryAccess 
-    *rma = (type == REGISTER_RAM) ?
-    &(gp->cpu->rma) : &(gp->cpu->ema);
+  Register **cpu_regs = NULL;
+  int reg_size =0;
 
-  //for(reg_number=0;reg_number<gpsim_get_register_memory_size(pic_id, type);reg_number++) {
-  for(reg_number=0;reg_number<rma->get_size();reg_number++) {
+  if(type == REGISTER_RAM) {
+    cpu_regs = gp->cpu->rma.registers;
+    reg_size = gp->cpu->rma.nRegisters;
+  } else {
+    cpu_regs = gp->cpu->ema.registers;
+    reg_size = gp->cpu->ema.nRegisters;
+  }
+
+  for(reg_number=0;reg_number<reg_size;reg_number++) {
     i=reg_number%REGISTERS_PER_ROW;
 	
     if(i==0 && row_created)
@@ -1716,7 +1724,7 @@ void Register_Window::NewProcessor(GUI_Processor *gp)
     registers[reg_number]->col = i;
     registers[reg_number]->put_shadow(INVALID_VALUE);
     registers[reg_number]->update_full=TRUE;
-    registers[reg_number]->reg = rma->get_register(reg_number);
+    registers[reg_number]->reg = cpu_regs[reg_number];
 
       /*
       gpsim_get_register(gp->cpu->processor_id,
