@@ -137,7 +137,7 @@ void INTCON_16::clear_gies(void)
 
   assert(cpu != 0);
 
-  if(cpu16->interrupt_vector == INTERRUPT_VECTOR_HI)
+  if(haveHighPriorityInterrupt())
     put(get() & ~GIEH);
   else
     put(get() & ~GIEL);
@@ -209,7 +209,6 @@ void INTCON_16::set_gies(void)
 // outputs: none
 //
 //----------------------------------------------------------------------
-extern void DEBUG_print_interrupt_vector(Processor *cpu);
 
 void INTCON_16::put(unsigned int new_value)
 {
@@ -250,7 +249,7 @@ void INTCON_16::put(unsigned int new_value)
       if(i1 & ( (intcon2->value & (T0IF | RBIF)) | INTF))
 	{
 	  //cout << " selecting high priority vector\n";
-	  cpu16->interrupt_vector = INTERRUPT_VECTOR_HI;
+	  set_interrupt_vector(INTERRUPT_VECTOR_HI);
 	  trace.interrupt();
 	  bp.set_interrupt();
 	  return;
@@ -264,7 +263,7 @@ void INTCON_16::put(unsigned int new_value)
       if(i1 & ( (~intcon2->value & (T0IF | RBIF)) | INTF))
 	{
 	  //cout << " selecting low priority vector\n";
-	  cpu16->interrupt_vector = INTERRUPT_VECTOR_LO;
+	  set_interrupt_vector(INTERRUPT_VECTOR_LO);
 	  trace.interrupt();
 	  bp.set_interrupt();
 	  return;
@@ -276,12 +275,8 @@ void INTCON_16::put(unsigned int new_value)
     {
       // ignore interrupt priorities
 
-      cout << " ignoring interrupt priorities, selecting high priority vector:" << INTERRUPT_VECTOR_HI << endl;
-  DEBUG_print_interrupt_vector(cpu);
+      set_interrupt_vector(INTERRUPT_VECTOR_HI);
 
-
-      cpu16->interrupt_vector = INTERRUPT_VECTOR_HI;
-  DEBUG_print_interrupt_vector(cpu);
       if(value & GIE) 
 	{
 	  if( ( (value>>3)&value) & (T0IF | INTF | RBIF) )
